was added: Manage preview photo Save location (lat, lon)
